--- a/.gitmodules
+++ b/.gitmodules
@@ -2,5 +2,5 @@
 	path = components/mruby_component/mruby
 	url = https://github.com/mruby/mruby.git
 [submodule "components/M5StickC"]
-	path = components/M5StickC
+	path = components/m5stickc_component/M5StickC
 	url = https://github.com/m5stack/M5StickC.git
