add arduino component

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "components/m5stickc_component/M5StickC"]
 	path = components/m5stickc_component/M5StickC
 	url = https://github.com/m5stack/M5StickC.git
+[submodule "components/arduino"]
+	path = components/arduino
+	url = https://github.com/espressif/arduino-esp32.git
